<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TPAnnoncesProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_annonce_view_">Liste des annonces</string>
    <string name="title_activity_annonce_edit">Modification d\'une annonce</string>
    <string name="title_activity_annonce_insert">Nouvelle annonce</string>
    <string name="empty_string"></string>
    <string name="annonce_date">Posté le : </string>
    <string name="annonce_prix">Prix : </string>
    <string name="annonce_libelle">Titre : </string>
    <string name="annonce_desc">Description : </string>
    <string name="annonce_img_desc">Image</string>
    <string name="user_prenom">Prenom : </string>
    <string name="user_nom">Nom : </string>
    <string name="user_contact">Contact : </string>
    <string name="user_description">Description : </string>
    <string name="user_site">Site : </string>
    <string name="user_img_desc">Image</string>
    <string name="user_Libelle">Libelle : </string>
   	<string name="user_id">id Utilisateur : </string>
    <string name="string_loading">Chargement</string>
    <string name="btnNext">suiv</string>
    <string name="btnBack">arr</string>
    <string name="btnRefresh">Refraichir</string>
    <string name="btnViewFullSize">Voir l\'image</string>
    <string name="btnDownloaFullSize">Télécharger</string>
    <string name="euro_sign">€</string>
   	<string name="mod_annonce">Modifier l\'annonce</string>
    <string name="webservice_adress">http://192.168.1.72:80</string>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="lgray">#d6d7db</color>
   	<color name="lblue">#0687ef</color>
   	<color name="lgreen">#d2fbc2</color>

    <string name="title_activity_annonce_single_view">AnnonceSingleViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_Desc">Projet FilRrouge avec utilisation du webservice</string>

</resources>
