<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/annoncegrid_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gridview_shape_selector"
    android:columnCount="4"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_rowSpan="3"
        android:layout_gravity="center"
        android:background="@drawable/gdvannonce_cell_image_shape"
        android:contentDescription="@string/annonce_img_desc"
        android:src="@drawable/logo_na" />
    
    <TextView
        android:id="@+id/txtLibelleAnnonce"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@drawable/tvtitle_shape"
        android:maxLines="2"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:text="@string/annonce_libelle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
    
    <TextView
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:maxLines="2"
        android:layout_gravity="start"
        android:id="@+id/txtAuthorAnnonce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:text="@string/user_nom"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:id="@+id/txtDateAnnonce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_row="2"
        android:text="@string/annonce_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/cbxAnnonce"
        android:layout_rowSpan="3"
        android:layout_column="0"
        android:checked="false"
        android:focusable="false"
		android:focusableInTouchMode="false"
       	android:layout_gravity="center"
       	android:button="@drawable/checkbox_selector" 
        android:layout_row="0" />

</GridLayout>